src/test/deca/context/valid/Class17.deca
// Description:
//    Definition de class + plusieurs manipulations avec class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022

class A{
    boolean a;
    boolean b;
}
class B{
    boolean a;
    boolean b;
}

{
    A FIRST=new A();
    B SECOND=new B();
    FIRST.a=true;
    FIRST.b=false;
    SECOND.a=true;
    SECOND.b=false;
}