src/test/deca/context/invalid/class6.deca
class A{
    boolean b=true;
}

{
    A FIRST=new A();
    FIRST.b=10;
    
}